[package]
name = "cirtrace"
version = "0.1.10"
authors = ["Kris <versbinarii@gmail.com>"]
edition = "2018"
description = "Tool for debugging and tracing VoIP call on a Cirpack platform"
license = "MIT"
readme = "README.md"
keywords=["tool", "tracing", "cirpack", "cli-tool"]
repository = "https://github.com/VersBinarii/cirtrace"

[dependencies]
ssh2 = "0.5.0"
regex = "1.3"
lazy_static = "1.4"

[dependencies.clap]
version = "2.33.0"
default-features = false